Fix nullptr check

It made sure to only dereference nullptrs.

BUG: 484620


(cherry picked from commit eb21912e7e0ce5a70c6f906c6e5a20f56cc6783e)